base/03-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: team-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # ربات این خط را مستقیماً آپدیت خواهد کرد
          image: "ghcr.io/hjali7/team-app-ui:c96351559ddb115373659a2b64a54f4aa3e65bf4"
          ports:
            - containerPort: 3000
