base/02-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: team-app
spec:
  type: ClusterIP
  selector:
    app: backend 
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8080
