base/03-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: team-app
spec:
  type: ClusterIP
  selector:
    app: frontend 
  ports:
    - protocol: TCP
      port: 80         
      targetPort: 3000
