base/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: team-app-ingress
  namespace: team-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    # --- این خط را تغییر دهید ---
    # ما از sslip.io برای ساختن یک دامنه تستی استفاده می‌کنیم
    - host: "http://team.looparc.ir"
    # ---
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
